--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ $(document).ready(function(){
 	        <ul class="nav navbar-nav" style=" margin-top:25px;" >
             <li><i class="fa fa-phone-square" aria-hidden="true" style="color:#002A6C;"></i>&nbsp;&nbsp;+1  (647) 469-4111</li> 
             <li> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-            <li><i class="fa fa-envelope" aria-hidden="true" style="color:#002A6C;"></i>&nbsp;&nbsp;consulting@ameagroup.ca</li>
+            <li><i class="fa fa-envelope" aria-hidden="true" style="color:#002A6C;"></i>&nbsp;&nbsp;consulting@amea.group</li>
 		     <li> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>   
 		        
 		    </ul>
@@ -375,7 +375,7 @@ processing Express Entry. I recommend them Highly!!</p>
                     <br>
                     <abbr>Telephone : </abbr> +1 (647) 469-4111
                     <br>
-                    <abbr>Email : </abbr> <a href="mailto@consulting@ameagroup.ca">consulting@ameagroup.ca</a>
+                    <abbr>Email : </abbr> <a href="mailto@consulting@amea.group">consulting@amea.group</a>
                </address>
                <br><br>
                <address>
@@ -391,7 +391,7 @@ processing Express Entry. I recommend them Highly!!</p>
                     <br>
                     <abbr>Telephone : </abbr> +91 7659 944 111
                     <br>
-                    <abbr>Email : </abbr> <a href="mailto@consulting@ameagroup.ca">consulting@ameagroup.ca</a>
+                    <abbr>Email : </abbr> <a href="mailto@consulting@amea.group">consulting@amea.group</a>
                </address>
     		</div>
     		<div class="col-md-3 grid_4">
