--- a/ielts.html
+++ b/ielts.html
@@ -57,7 +57,7 @@ $(document).ready(function(){
 	        <ul class="nav navbar-nav" style="margin-top:25px;">
             <li><i class="fa fa-phone-square" aria-hidden="true" style="color:#002A6C;"></i>&nbsp;&nbsp;+1  (647) 469-4111</li> 
             <li> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-            <li><i class="fa fa-envelope" aria-hidden="true" style="color:#002A6C;"></i>&nbsp;&nbsp;consulting@amea.group</li>
+            <li><i class="fa fa-envelope" aria-hidden="true" style="color:#002A6C;"></i>&nbsp;&nbsp;info@amea.group</li>
 		     <li> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>   
 		        
 		    </ul>
@@ -231,7 +231,7 @@ processing Express Entry. I recommend them Highly!!</p>
                     <br>
                     <abbr>Telephone : </abbr> +1 (647) 469-4111
                     <br>
-                    <abbr>Email : </abbr> <a href="mailto@consulting@amea.group">consulting@amea.group</a>
+                    <abbr>Email : </abbr> <a href="mailto@info@amea.group">info@amea.group</a>
                </address>
                <br><br>
                <address>
